Address code review feedback: improve code quality
Co-authored-by: krisssixCngrvt <246585788+krisssixCngrvt@users.noreply.github.com>